--- a/contact.html
+++ b/contact.html
@@ -14,8 +14,8 @@
     <div class="logo"><a href="index.html">Ripa Elevate Academy</a></div>
     <nav>
       <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="services.html">Subjects</a>
+    <a href="index.html">About</a>
+    <a href="services.html">Subjects</a>
       <a href="pricing.html">Pricing</a>
       <a href="booking.html">Book</a>
       <a href="testimonials.html">Testimonials</a>
