--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="logo"><a href="index.html">Ripa Elevate Academy</a></div>
     <nav>
       <a href="index.html">Home</a>
-      <a href="about.html">About</a>
+      <a href="index.html">About</a>
       <a href="services.html">Subjects</a>
       <a href="pricing.html">Pricing</a>
       <a href="booking.html">Book</a>
