--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="logo"><a href="index.html">Ripa Elevate Academy</a></div>
     <nav>
       <a href="index.html">Home</a>
-      <a href="index.html">About</a>
+      <a href="about.html">About</a>
       <a href="services.html">Subjects</a>
       <a href="pricing.html">Pricing</a>
       <a href="booking.html">Book</a>
@@ -24,10 +24,15 @@
     </nav>
   </header>
 
-  <section class="section">
-    <h2>About Brian</h2>
-    <p>Hi! I’m Brian, the founder of Ripa Elevate Academy. I earned my undergraduate degree in Computer Science &amp; Information Security from John Jay College and am currently pursuing my Master’s degree in the same field. I’ve tutored students from 1st grade through college, helping them succeed in everything from reading comprehension and elementary math to advanced college‑level courses.</p>
-    <p>I specialize in college math including Calculus I, II, and III, College Algebra, Pre‑Calculus, and regular Algebra. I take a personalized approach with every student and use clear, step‑by‑step instruction that builds confidence and lasting skills. Whether you’re preparing for a standardized test, need help with daily homework, or want to dive deeper into computer science, I’m here to help you rise higher.</p>
+  <section class="section" style="display: flex; flex-wrap: wrap; align-items: center; gap: 2rem;">
+    <div style="flex: 1; min-width: 280px;">
+      <img src="images/brian-profile.jpg" alt="Brian - Ripa Elevate Academy" style="width: 100%; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+    </div>
+    <div style="flex: 2; min-width: 280px;">
+      <h2>About Brian</h2>
+      <p>Hi! I’m Brian, the founder of Ripa Elevate Academy. I earned my undergraduate degree in Computer Science &amp; Information Security from John Jay College and am currently pursuing my Master’s degree in the same field. I’ve tutored students from 1st grade through college, helping them succeed in everything from reading comprehension and elementary math to advanced college‑level courses.</p>
+      <p>I specialize in college math including Calculus I, II, and III, College Algebra, Pre‑Calculus, and regular Algebra. I take a personalized approach with every student and use clear, step‑by‑step instruction that builds confidence and lasting skills. Whether you’re preparing for a standardized test, need help with daily homework, or want to dive deeper into computer science, I’m here to help you rise higher.</p>
+    </div>
   </section>
 
   <footer>
