--- a/about.html
+++ b/about.html
@@ -29,10 +29,10 @@
     <section class="about">
       <h2>About Brian</h2>
       <div class="about-content">
-        <img src="images/hero_photo.jpg" alt="Brian - Ripa Elevate Academy" class="about-img"/>
-        <div>
+        <img src="images/hero_photo.jpg" alt="Brian teaching math" class="about-img"/>
+        <div class="about-text">
           <p>
-            Hi! I’m Brian, the founder of Ripa Elevate Academy. I earned my undergraduate degree in Computer Science & Information Security from John Jay College and am currently pursuing my Master’s degree in the same field. I’ve tutored students from 1st grade through college, helping them succeed in everything from reading comprehension and elementary math to advanced college-level courses.
+            Hi! I’m Brian, the founder of Ripa Elevate Academy. I earned my undergraduate degree in Computer Science &amp; Information Security from John Jay College and am currently pursuing my Master’s degree in the same field. I’ve tutored students from 1st grade through college, helping them succeed in everything from reading comprehension and elementary math to advanced college-level courses.
           </p>
           <p>
             I specialize in college math including Calculus I, II, and III, College Algebra, Pre-Calculus, and regular Algebra. I take a personalized approach with every student and use clear, step-by-step instruction that builds confidence and lasting skills. Whether you’re preparing for a standardized test, need help with daily homework, or want to dive deeper into computer science, I’m here to help you rise higher.
@@ -45,7 +45,10 @@
   <footer>
     <div class="container">
       <p>&copy; 2025 Ripa Elevate Academy. All rights reserved.</p>
-      <p>Phone: <a href="tel:3479960551">347-996-0551</a> | Email: <a href="mailto:ripabrian93@gmail.com">ripabrian93@gmail.com</a></p>
+      <p>
+        Phone: <a href="tel:+13479960551">347-996-0551</a> |
+        Email: <a href="mailto:ripabrian93@gmail.com">ripabrian93@gmail.com</a>
+      </p>
     </div>
   </footer>
 </body>
