--- a/about.html
+++ b/about.html
@@ -8,8 +8,10 @@
 </head>
 <body>
   <header>
-    <div class="container">
-      <h1>Ripa Elevate Academy</h1>
+    <div class="container" style="display: flex; justify-content: space-between; align-items: center;">
+      <div class="logo">
+        <a href="index.html">Ripa Elevate Academy</a>
+      </div>
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -53,3 +55,4 @@
   </footer>
 </body>
 </html>
+
