--- a/contact.html
+++ b/contact.html
@@ -11,27 +11,27 @@
 </head>
 <body>
   <header>
-    <div class="logo"><a href="index.html">Ripa Elevate Academy</a></div>
-    <nav>
-      <a href="index.html">Home</a>
-    <a href="index.html">About</a>
-    <a href="services.html">Subjects</a>
-      <a href="pricing.html">Pricing</a>
-      <a href="booking.html">Book</a>
-      <a href="testimonials.html">Testimonials</a>
-      <a href="resources.html">Resources</a>
-      <a href="contact.html">Contact</a>
-    </nav>
+    <div class="container" style="display: flex; justify-content: space-between; align-items: center;">
+      <div class="logo"><a href="index.html">Ripa Elevate Academy</a></div>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="services.html">Subjects</a></li>
+          <li><a href="pricing.html">Pricing</a></li>
+          <li><a href="booking.html">Book</a></li>
+          <li><a href="testimonials.html">Testimonials</a></li>
+          <li><a href="resources.html">Resources</a></li>
+          <li><a href="contact.html" class="active">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
-  <section class="section">
+  <main class="section">
     <h2>Contact Me</h2>
     <p>If you have any questions or would like to get started, please fill out the form below. I’ll respond as soon as possible.</p>
-    <!--
-      Integrate with Formspree for a working contact form.
-      Replace the action URL below with your own Formspree endpoint.  See
-      https://formspree.io for details.  Each input must have a name attribute.
-    -->
+
     <form action="https://formspree.io/f/mqkjvpan" method="POST">
       <label for="name">Name</label>
       <input type="text" id="name" name="name" placeholder="Your name" required>
@@ -42,16 +42,23 @@
       <label for="message">Message</label>
       <textarea id="message" name="message" placeholder="How can I help you?" required></textarea>
 
-      <!-- Hidden subject line for your notification email -->
       <input type="hidden" name="_subject" value="New message from Ripa Elevate Academy">
       <button type="submit">Send Message</button>
     </form>
-    <p style="text-align:center;margin-top:1rem;">You can also reach me at <a href="tel:+13479960551">347-996-0551</a> or <a href="mailto:ripabrian93@gmail.com">ripabrian93@gmail.com</a>.</p>
-  </section>
+
+    <p style="text-align:center; margin-top: 1rem;">
+      You can also reach me at <a href="tel:+13479960551">347-996-0551</a> or <a href="mailto:ripabrian93@gmail.com">ripabrian93@gmail.com</a>.
+    </p>
+  </main>
 
   <footer>
-    &copy; 2025 Ripa Elevate Academy. All rights reserved.
-    <div class="footer-contact">Phone: <a href="tel:+13479960551" style="color:#FFC857">347-996-0551</a> | Email: <a href="mailto:ripabrian93@gmail.com" style="color:#FFC857">ripabrian93@gmail.com</a></div>
+    <div class="container">
+      <p>&copy; 2025 Ripa Elevate Academy. All rights reserved.</p>
+      <p class="footer-contact">
+        Phone: <a href="tel:+13479960551">347-996-0551</a> |
+        Email: <a href="mailto:ripabrian93@gmail.com">ripabrian93@gmail.com</a>
+      </p>
+    </div>
   </footer>
 </body>
 </html>
