--- a/index.html
+++ b/index.html
@@ -1,43 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Brian – Ripa Elevate Academy</title>
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Lato:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Home – Ripa Elevate Academy</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Lato:wght@400;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
   <header>
-    <div class="logo"><a href="index.html">Ripa Elevate Academy</a></div>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="services.html">Subjects</a>
-      <a href="pricing.html">Pricing</a>
-      <a href="booking.html">Book</a>
-      <a href="testimonials.html">Testimonials</a>
-      <a href="resources.html">Resources</a>
-      <a href="contact.html">Contact</a>
-    </nav>
+    <div class="container" style="display: flex; justify-content: space-between; align-items: center;">
+      <div class="logo"><a href="index.html">Ripa Elevate Academy</a></div>
+      <nav>
+        <ul>
+          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="services.html">Subjects</a></li>
+          <li><a href="pricing.html">Pricing</a></li>
+          <li><a href="booking.html">Book</a></li>
+          <li><a href="testimonials.html">Testimonials</a></li>
+          <li><a href="resources.html">Resources</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
-  <section class="section" style="display: flex; flex-wrap: wrap; align-items: center; gap: 2rem;">
+  <main class="section" style="display: flex; flex-wrap: wrap; align-items: center; gap: 2rem;">
     <div style="flex: 1; min-width: 280px;">
-      <img src="images/brian-profile.jpg" alt="Brian - Ripa Elevate Academy" style="width: 100%; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+      <img src="images/brian-profile.jpg" alt="Brian - Ripa Elevate Academy" style="width: 100%; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);" />
     </div>
     <div style="flex: 2; min-width: 280px;">
       <h2>About Brian</h2>
       <p>Hi! I’m Brian, the founder of Ripa Elevate Academy. I earned my undergraduate degree in Computer Science &amp; Information Security from John Jay College and am currently pursuing my Master’s degree in the same field. I’ve tutored students from 1st grade through college, helping them succeed in everything from reading comprehension and elementary math to advanced college‑level courses.</p>
       <p>I specialize in college math including Calculus I, II, and III, College Algebra, Pre‑Calculus, and regular Algebra. I take a personalized approach with every student and use clear, step‑by‑step instruction that builds confidence and lasting skills. Whether you’re preparing for a standardized test, need help with daily homework, or want to dive deeper into computer science, I’m here to help you rise higher.</p>
     </div>
-  </section>
+  </main>
 
   <footer>
-    &copy; 2025 Ripa Elevate Academy. All rights reserved.
-    <div class="footer-contact">Phone: <a href="tel:+13479960551" style="color:#F28F3B">347-996-0551</a> | Email: <a href="mailto:ripabrian93@gmail.com" style="color:#F28F3B">ripabrian93@gmail.com</a></div>
+    <div class="container">
+      <p>&copy; 2025 Ripa Elevate Academy. All rights reserved.</p>
+      <p class="footer-contact">
+        Phone: <a href="tel:+13479960551">347-996-0551</a> |
+        Email: <a href="mailto:ripabrian93@gmail.com">ripabrian93@gmail.com</a>
+      </p>
+    </div>
   </footer>
 </body>
 </html>
+
