--- a/pricing.html
+++ b/pricing.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Pricing – Ripa Elevate Academy</title>
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Lato:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Lato:wght@400;700&display=swap" rel="stylesheet"/>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
   <header>
@@ -26,50 +26,83 @@
 
   <section class="section pricing alt-bg">
     <h2>Pricing Plans</h2>
-    <p>Choose the plan that best fits your needs. All sessions are one‑on‑one and tailored to each student.</p>
+    <p>All sessions are 60 minutes and personalized to each student’s needs. Additional time can be arranged upon request.</p>
+
     <div class="cards colorful">
       <div class="card">
-        <h3>Basic Plan</h3>
-        <div class="price">$45/hr</div>
+        <h3>2nd–5th Grade</h3>
+        <div class="price">$55/hr</div>
         <ul>
-          <li>1‑on‑1 tutoring</li>
-          <li>No extra materials</li>
+          <li>1-on-1 personalized tutoring</li>
+          <li>Homework help and foundational support</li>
         </ul>
       </div>
+
       <div class="card">
-        <h3>Standard Plan</h3>
-        <div class="price">$60/hr</div>
+        <h3>6th–8th Grade</h3>
+        <div class="price">$65/hr</div>
         <ul>
-          <li>Custom lessons</li>
-          <li>Weekly progress updates</li>
-          <li>Light homework assignments</li>
+          <li>Middle school core subjects</li>
+          <li>Progress tracking and light homework</li>
         </ul>
       </div>
+
       <div class="card">
-        <h3>Premium Plan</h3>
+        <h3>High School</h3>
+        <div class="price">$70/hr</div>
+        <ul>
+          <li>Algebra, Geometry, Writing, and more</li>
+          <li>Exam strategies and concept mastery</li>
+        </ul>
+      </div>
+
+      <div class="card">
+        <h3>Specialized Exams & College-Level</h3>
         <div class="price">$75/hr</div>
         <ul>
-          <li>Everything in Standard</li>
-          <li>Extended time sessions</li>
-          <li>Custom worksheets</li>
-          <li>Monthly reports</li>
-          <li>On‑demand support</li>
+          <li>SAT, SHSAT, State Exams</li>
+          <li>College Algebra, Calculus I & II, Discrete Math</li>
+          <li>Custom materials and focused prep</li>
+        </ul>
+      </div>
+
+      <div class="card">
+        <h3>AI & Tech Skills Training</h3>
+        <div class="price">$90/hr</div>
+        <ul>
+          <li>Training in AI tools, automation, and coding</li>
+          <li>Beginner-friendly for all ages</li>
         </ul>
       </div>
     </div>
+
     <h3 style="text-align:center;margin-top:2rem;">Add‑On Options</h3>
     <div class="cards colorful">
       <div class="card">
         <h3>Progress Report</h3>
-        <p>$20 – Receive a detailed progress report highlighting strengths and areas for improvement.</p>
+        <p>$20 – Detailed summary of student progress with feedback and next steps.</p>
       </div>
       <div class="card">
         <h3>Weekly Homework Packet</h3>
-        <p>$15 – Get a customized set of practice problems and writing prompts each week.</p>
+        <p>$15 – Personalized homework and practice worksheets delivered weekly.</p>
       </div>
       <div class="card">
         <h3>Quiz/Test Review</h3>
-        <p>$30 – 30‑minute focused session to review for upcoming quizzes or tests.</p>
+        <p>$30 – 30-minute session focused on preparing for an upcoming quiz or test.</p>
+      </div>
+    </div>
+
+    <h3 style="text-align:center; margin-top: 2.5rem;">Premium Video Membership</h3>
+    <div class="cards colorful">
+      <div class="card">
+        <h3>Monthly Access</h3>
+        <div class="price">$15/month</div>
+        <ul>
+          <li>Unlimited access to exclusive video lessons</li>
+          <li>Topics include math, reading, writing, and exam prep</li>
+          <li>Watch anytime, at your own pace</li>
+        </ul>
+        <a href="videos.html" class="button" style="display:inline-block;margin-top:1rem;background:#F28F3B;padding:0.6rem 1.2rem;color:#fff;border-radius:8px;text-decoration:none;">Explore Video Library</a>
       </div>
     </div>
   </section>
