--- a/resources.html
+++ b/resources.html
@@ -14,7 +14,7 @@
     <div class="logo"><a href="index.html">Ripa Elevate Academy</a></div>
     <nav>
       <a href="index.html">Home</a>
-      <a href="index.html">About</a>
+      <a href="about.html">About</a>
       <a href="services.html">Subjects</a>
       <a href="pricing.html">Pricing</a>
       <a href="booking.html">Book</a>
@@ -25,20 +25,21 @@
   </header>
 
   <section class="section">
-    <h2>Resources</h2>
-    <p>Here you'll find bonus worksheets, review guides, and helpful practice materials. As the library grows, new PDFs, worksheets, and videos will be added for you to download and enjoy at no extra cost.</p>
+    <h2>Free & Premium Resources</h2>
+    <p>Access free downloadable worksheets, reading packets, and more. You can also subscribe to our premium video library for in-depth lessons on math, test prep, and AI skills for just $15/month.</p>
+
     <div class="cards colorful">
       <div class="card">
-        <h3>Reading Packets</h3>
-        <p>Short stories and exercises to improve comprehension. These will be available soon as downloadable PDFs.</p>
+        <h3>Free Reading Packets</h3>
+        <p>Printable short stories and exercises to strengthen comprehension skills across all grades. New content is added regularly.</p>
       </div>
       <div class="card">
-        <h3>Math Problem Sets</h3>
-        <p>Practice problems for all grade levels. New packets will be uploaded regularly.</p>
+        <h3>Free Math Worksheets</h3>
+        <p>Skill-based practice problems for grades 1–12. Great for review, homework help, or skill-building between sessions.</p>
       </div>
       <div class="card">
-        <h3>Mini‑Lesson Videos</h3>
-        <p>Brief video tutorials covering common problem areas in math and computer science.</p>
+        <h3>Premium Video Library</h3>
+        <p>Subscribe for $15/month to unlock our growing video library. Topics include advanced math, SAT prep, coding, AI skills, and more – available anytime, for all ages.</p>
       </div>
     </div>
   </section>
@@ -49,3 +50,4 @@
   </footer>
 </body>
 </html>
+
