--- a/services.html
+++ b/services.html
@@ -5,55 +5,4 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Subjects &amp; Services – Ripa Elevate Academy</title>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Lato:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-  <header>
-    <div class="logo"><a href="index.html">Ripa Elevate Academy</a></div>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="services.html">Subjects</a>
-      <a href="pricing.html">Pricing</a>
-      <a href="booking.html">Book</a>
-      <a href="testimonials.html">Testimonials</a>
-      <a href="resources.html">Resources</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </header>
-
-  <section class="section">
-    <h2>Subjects &amp; Services</h2>
-    <p>Ripa Elevate Academy offers comprehensive tutoring across a wide range of subjects. Each service is tailored to the student’s current level, learning style, and goals.</p>
-    <div class="cards colorful">
-      <div class="card">
-        <h3><span class="icon">📚</span>Elementary (1st–5th Grade)</h3>
-        <p>Fundamental math skills, reading comprehension, grammar, vocabulary, and creative writing exercises designed to build strong foundations.</p>
-      </div>
-      <div class="card">
-        <h3><span class="icon">📝</span>Test Preparation</h3>
-        <p>Targeted coaching for SHSAT, SAT, and NY State exams. Students learn test‑taking strategies, timing techniques, and practice with realistic questions.</p>
-      </div>
-      <div class="card">
-        <h3><span class="icon">📐</span>Middle &amp; High School Math</h3>
-        <p>Courses include Pre‑Algebra, Algebra, and Geometry. We clarify concepts, solve problems step by step, and prepare students for higher‑level math.</p>
-      </div>
-      <div class="card">
-        <h3><span class="icon">🔢</span>College‑Level Math</h3>
-        <p>College Algebra, Pre‑Calculus, and Calculus I–III. Sessions focus on understanding underlying principles and applying them to complex problems.</p>
-      </div>
-      <div class="card">
-        <h3><span class="icon">💻</span>Coding &amp; Cybersecurity</h3>
-        <p>Introductory programming, algorithmic thinking, and cybersecurity basics for students interested in computer science and digital safety.</p>
-      </div>
-    </div>
-  </section>
-
-  <footer>
-    &copy; 2025 Ripa Elevate Academy. All rights reserved.
-    <div class="footer-contact">Phone: <a href="tel:+13479960551" style="color:#F28F3B">347-996-0551</a> | Email: <a href="mailto:ripabrian93@gmail.com" style="color:#F28F3B">ripabrian93@gmail.com</a></div>
-  </footer>
-</body>
-</html>
+  <link rel="preconnect" href="https
