--- a/testimonials.html
+++ b/testimonials.html
@@ -25,18 +25,22 @@
   </header>
 
   <section class="section">
-    <h2>Testimonials</h2>
+    <h2>What Parents and Students Are Saying</h2>
+    <p style="text-align: center; max-width: 700px; margin: 0 auto 2rem;">
+      Hear firsthand from families and students who have worked with Ripa Elevate Academy.
+      These stories highlight the personalized attention, professional instruction, and real results we deliver.
+    </p>
     <div class="cards colorful">
       <div class="card">
-        <p>“Brian helped my son gain confidence in math—he’s now excited to learn!”</p>
+        <blockquote>“Brian helped my son build real confidence in math. He now looks forward to his sessions and is finally enjoying learning!”</blockquote>
         <p><em>— Parent of a middle schooler</em></p>
       </div>
       <div class="card">
-        <p>“Professional, prepared, and patient—highly recommend Ripa Elevate Academy!”</p>
+        <blockquote>“Professional, patient, and always prepared. Brian truly goes above and beyond. Highly recommend Ripa Elevate Academy!”</blockquote>
         <p><em>— High school parent</em></p>
       </div>
       <div class="card">
-        <p>“The personalized lessons and progress updates are amazing!”</p>
+        <blockquote>“The personalized lessons and consistent progress updates have helped me stay on track in college. Brian made a huge difference!”</blockquote>
         <p><em>— College student</em></p>
       </div>
     </div>
