--- a/about.html
+++ b/about.html
@@ -1,58 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>About - Ripa Elevate Academy</title>
-  <link rel="stylesheet" href="css/style.css" />
-</head>
-<body>
-  <header>
-    <div class="container" style="display: flex; justify-content: space-between; align-items: center;">
-      <div class="logo">
-        <a href="index.html">Ripa Elevate Academy</a>
-      </div>
-      <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html" class="active">About</a></li>
-          <li><a href="services.html">Subjects</a></li>
-          <li><a href="pricing.html">Pricing</a></li>
-          <li><a href="booking.html">Book</a></li>
-          <li><a href="testimonials.html">Testimonials</a></li>
-          <li><a href="resources.html">Resources</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
-
-  <main class="container">
-    <section class="about">
+<section class="section about-section">
+  <div class="about-container">
+    <div class="about-text">
       <h2>About Brian</h2>
-      <div class="about-content">
-        <img src="images/hero_photo.jpg" alt="Brian teaching math" class="about-img"/>
-        <div class="about-text">
-          <p>
-            Hi! I’m Brian, the founder of Ripa Elevate Academy. I earned my undergraduate degree in Computer Science &amp; Information Security from John Jay College and am currently pursuing my Master’s degree in the same field. I’ve tutored students from 1st grade through college, helping them succeed in everything from reading comprehension and elementary math to advanced college-level courses.
-          </p>
-          <p>
-            I specialize in college math including Calculus I, II, and III, College Algebra, Pre-Calculus, and regular Algebra. I take a personalized approach with every student and use clear, step-by-step instruction that builds confidence and lasting skills. Whether you’re preparing for a standardized test, need help with daily homework, or want to dive deeper into computer science, I’m here to help you rise higher.
-          </p>
-        </div>
-      </div>
-    </section>
-  </main>
-
-  <footer>
-    <div class="container">
-      <p>&copy; 2025 Ripa Elevate Academy. All rights reserved.</p>
-      <p>
-        Phone: <a href="tel:+13479960551">347-996-0551</a> |
-        Email: <a href="mailto:ripabrian93@gmail.com">ripabrian93@gmail.com</a>
-      </p>
+      <p>Hi! I’m Brian, the founder of Ripa Elevate Academy. I earned my undergraduate degree in Computer Science & Information Security from John Jay College and am currently pursuing my Master’s in the same field.</p>
+      <p>I’ve tutored students from 1st grade through college, helping them succeed in reading comprehension, elementary math, and advanced college-level courses like Algebra, Pre-Calc, and Calculus I, II, III.</p>
+      <p>I believe in personalized learning and step-by-step instruction to build lasting confidence.</p>
     </div>
-  </footer>
-</body>
-</html>
+    <div class="about-image">
+      <img src="images/math-tutor.jpg" alt="Brian tutoring a student" />
+    </div>
+  </div>
+</section>
 
