--- a/services.html
+++ b/services.html
@@ -1,8 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Subjects &amp; Services – Ripa Elevate Academy</title>
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="preconnect" href="https
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Subjects – Ripa Elevate Academy</title>
+  <link rel="stylesheet" href="css/style.css" />
+</head>
+<body>
+  <header>
+    <div class="logo"><a href="index.html">Ripa Elevate Academy</a></div>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="services.html" class="active">Subjects</a>
+      <a href="pricing.html">Pricing</a>
+      <a href="booking.html">Book</a>
+      <a href="testimonials.html">Testimonials</a>
+      <a href="resources.html">Resources</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
+
+  <section class="section">
+    <h2>Subjects Offered</h2>
+    <div class="cards colorful">
+      <div class="card">
+        <h3>Grades 2–5</h3>
+        <p>Reading comprehension, multiplication, division, fractions, word problems, and writing support.</p>
+      </div>
+      <div class="card">
+        <h3>Grades 6–8</h3>
+        <p>Pre-Algebra, decimals, percent, multi-step problems, essay writing, and grammar review.</p>
+      </div>
+      <div class="card">
+        <h3>High School</h3>
+        <p>Algebra, Geometry, Trigonometry, Pre-Calculus, Regents & State Exam prep.</p>
+      </div>
+      <div class="card">
+        <h3>College & Test Prep</h3>
+        <p>SAT, SHSAT, College Algebra, Discrete Math, Calculus I/II, college-level writing & research.</p>
+      </div>
+      <div class="card">
+        <h3>AI Training</h3>
+        <p>Beginner-friendly AI tools training (ChatGPT, Midjourney, AI productivity tools) for students, professionals, and small businesses.</p>
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    &copy; 2025 Ripa Elevate Academy. All rights reserved.
+    <div class="footer-contact">
+      Phone: <a href="tel:+13479960551" style="color:#F28F3B">347-996-0551</a> |
+      Email: <a href="mailto:ripabrian93@gmail.com" style="color:#F28F3B">ripabrian93@gmail.com</a>
+    </div>
+  </footer>
+</body>
+</html>
