--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 
   <section class="hero">
     <div class="hero-text">
-      <h1>Elevate Your Learning with Confidence</h1>
-      <p>Personalized tutoring for grades 2–college, specialized exams, and AI training. Unlock your child’s full potential today.</p>
+      <h1>One-on-One Tutoring That Delivers Results</h1>
+      <p>Boost confidence and grades with expert, personalized sessions for students in grades 2 through college. Clear, supportive instruction every step of the way.</p>
       <a href="booking.html" class="btn">Book Your First Session</a>
     </div>
     <div class="hero-image">
-      <img src="images/hero.jpg" alt="Tutoring in action" />
+      <img src="images/hero.jpg" alt="One-on-one tutoring illustration" />
     </div>
   </section>
 
@@ -43,4 +43,5 @@
   </footer>
 </body>
 </html>
+
 
