--- a/index.html
+++ b/index.html
@@ -4,23 +4,29 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Ripa Elevate Academy – Tutoring That Works</title>
+  <meta name="description" content="Professional one-on-one tutoring for grades 2 through college. Expert instruction in math, reading, writing, test prep, and AI skills training.">
   <link rel="stylesheet" href="css/style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
-    <div class="logo"><a href="index.html">Ripa Elevate Academy</a></div>
-    <nav>
-      <a href="index.html" class="active">Home</a>
-      <a href="about.html">About</a>
-      <a href="services.html">Subjects</a>
-      <a href="pricing.html">Pricing</a>
-      <a href="booking.html">Book</a>
-      <a href="testimonials.html">Testimonials</a>
-      <a href="resources.html">Resources</a>
-      <a href="contact.html">Contact</a>
-    </nav>
+    <div class="container">
+      <div class="logo"><a href="index.html">Ripa Elevate Academy</a></div>
+      <nav>
+        <ul>
+          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="services.html">Subjects</a></li>
+          <li><a href="pricing.html">Pricing</a></li>
+          <li><a href="booking.html">Book</a></li>
+          <li><a href="testimonials.html">Testimonials</a></li>
+          <li><a href="resources.html">Resources</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
   <section class="hero">
@@ -30,18 +36,76 @@
       <a href="booking.html" class="btn">Book Your First Session</a>
     </div>
     <div class="hero-image">
-      <img src="images/hero.jpg" alt="One-on-one tutoring illustration" />
+      <img src="https://images.pexels.com/photos/5212345/pexels-photo-5212345.jpeg?auto=compress&cs=tinysrgb&w=600" alt="One-on-one tutoring session" />
+    </div>
+  </section>
+
+  <!-- About Section -->
+  <section class="about-section">
+    <div class="about-container">
+      <div class="about-text">
+        <h2>About Brian</h2>
+        <p>Hi! I'm Brian, the founder of Ripa Elevate Academy. I earned my undergraduate degree in Computer Science & Information Security from John Jay College and am currently pursuing my Master's in the same field.</p>
+        <p>I've tutored students from 1st grade through college, helping them succeed in reading comprehension, elementary math, and advanced college-level courses like Algebra, Pre-Calc, and Calculus I, II, III.</p>
+        <p>I believe in personalized learning and step-by-step instruction to build lasting confidence.</p>
+      </div>
+      <div class="about-image">
+        <img src="https://images.pexels.com/photos/5212703/pexels-photo-5212703.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Brian tutoring a student" />
+      </div>
+    </div>
+  </section>
+
+  <!-- Services Preview -->
+  <section class="section">
+    <h2>Subjects We Cover</h2>
+    <p>From elementary basics to college-level coursework, we provide comprehensive tutoring across all grade levels.</p>
+    <div class="cards colorful">
+      <div class="card">
+        <h3>Elementary (Grades 2-5)</h3>
+        <p>Reading comprehension, basic math, multiplication, division, fractions, and foundational writing skills.</p>
+      </div>
+      <div class="card">
+        <h3>Middle School (Grades 6-8)</h3>
+        <p>Pre-Algebra, advanced reading, essay writing, and preparation for high school coursework.</p>
+      </div>
+      <div class="card">
+        <h3>High School</h3>
+        <p>Algebra, Geometry, Trigonometry, Pre-Calculus, and comprehensive test preparation.</p>
+      </div>
+      <div class="card">
+        <h3>College & Beyond</h3>
+        <p>College Algebra, Calculus I/II, Discrete Math, SAT/SHSAT prep, and AI skills training.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Testimonials Preview -->
+  <section class="section testimonials alt-bg">
+    <h2>What Our Students Say</h2>
+    <div class="cards">
+      <div class="card">
+        <blockquote>Brian helped my son build real confidence in math. He now looks forward to his sessions and is finally enjoying learning!</blockquote>
+        <p><em>— Parent of a middle schooler</em></p>
+      </div>
+      <div class="card">
+        <blockquote>Professional, patient, and always prepared. Brian truly goes above and beyond. Highly recommend!</blockquote>
+        <p><em>— High school parent</em></p>
+      </div>
+      <div class="card">
+        <blockquote>The personalized lessons made a huge difference in my college math courses. Thank you!</blockquote>
+        <p><em>— College student</em></p>
+      </div>
     </div>
   </section>
 
   <footer>
-    &copy; 2025 Ripa Elevate Academy. All rights reserved.
-    <div class="footer-contact">
-      Phone: <a href="tel:+13479960551" style="color:#F28F3B">347-996-0551</a> |
-      Email: <a href="mailto:ripabrian93@gmail.com" style="color:#F28F3B">ripabrian93@gmail.com</a>
+    <div class="container">
+      <p>&copy; 2025 Ripa Elevate Academy. All rights reserved.</p>
+      <div class="footer-contact">
+        Phone: <a href="tel:+13479960551">347-996-0551</a> |
+        Email: <a href="mailto:ripabrian93@gmail.com">ripabrian93@gmail.com</a>
+      </div>
     </div>
   </footer>
 </body>
 </html>
-
-
