Complete Ripa Elevate Academy Website

--- a/pricing.html
+++ b/pricing.html
@@ -4,112 +4,141 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Pricing – Ripa Elevate Academy</title>
+  <meta name="description" content="Affordable tutoring rates for all grade levels. Transparent pricing with no hidden fees. Premium video library subscription available.">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Lato:wght@400;700&display=swap" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet"/>
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
   <header>
-    <div class="logo"><a href="index.html">Ripa Elevate Academy</a></div>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="services.html">Subjects</a>
-      <a href="pricing.html">Pricing</a>
-      <a href="booking.html">Book</a>
-      <a href="testimonials.html">Testimonials</a>
-      <a href="resources.html">Resources</a>
-      <a href="contact.html">Contact</a>
-    </nav>
+    <div class="container">
+      <div class="logo"><a href="index.html">Ripa Elevate Academy</a></div>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="services.html">Subjects</a></li>
+          <li><a href="pricing.html" class="active">Pricing</a></li>
+          <li><a href="booking.html">Book</a></li>
+          <li><a href="testimonials.html">Testimonials</a></li>
+          <li><a href="resources.html">Resources</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
   <section class="section pricing alt-bg">
     <h2>Pricing Plans</h2>
-    <p>All sessions are 60 minutes and personalized to each student’s needs. Additional time can be arranged upon request.</p>
+    <p>All sessions are 60 minutes and personalized to each student's needs. Additional time can be arranged upon request. No contracts or hidden fees.</p>
 
     <div class="cards colorful">
       <div class="card">
-        <h3>2nd–5th Grade</h3>
+        <h3>Elementary</h3>
+        <p style="font-size: 0.9rem; color: #666; margin-bottom: 1rem;">Grades 2–5</p>
         <div class="price">$55/hr</div>
         <ul>
           <li>1-on-1 personalized tutoring</li>
           <li>Homework help and foundational support</li>
+          <li>Reading comprehension and basic math</li>
+          <li>Progress tracking included</li>
         </ul>
       </div>
 
       <div class="card">
-        <h3>6th–8th Grade</h3>
+        <h3>Middle School</h3>
+        <p style="font-size: 0.9rem; color: #666; margin-bottom: 1rem;">Grades 6–8</p>
         <div class="price">$65/hr</div>
         <ul>
-          <li>Middle school core subjects</li>
-          <li>Progress tracking and light homework</li>
+          <li>Core subjects and pre-algebra</li>
+          <li>Progress tracking and homework support</li>
+          <li>Study skills development</li>
+          <li>Test preparation strategies</li>
         </ul>
       </div>
 
       <div class="card">
         <h3>High School</h3>
+        <p style="font-size: 0.9rem; color: #666; margin-bottom: 1rem;">Grades 9–12</p>
         <div class="price">$70/hr</div>
         <ul>
-          <li>Algebra, Geometry, Writing, and more</li>
+          <li>Algebra, Geometry, Pre-Calculus</li>
+          <li>Advanced writing and composition</li>
           <li>Exam strategies and concept mastery</li>
+          <li>College preparation support</li>
         </ul>
       </div>
 
       <div class="card">
-        <h3>Specialized Exams & College-Level</h3>
+        <h3>Specialized Exams & College</h3>
+        <p style="font-size: 0.9rem; color: #666; margin-bottom: 1rem;">SAT, SHSAT, College Level</p>
         <div class="price">$75/hr</div>
         <ul>
-          <li>SAT, SHSAT, State Exams</li>
-          <li>College Algebra, Calculus I & II, Discrete Math</li>
+          <li>SAT, SHSAT, State Exams preparation</li>
+          <li>College Algebra, Calculus I & II</li>
+          <li>Discrete Mathematics</li>
           <li>Custom materials and focused prep</li>
         </ul>
       </div>
 
       <div class="card">
         <h3>AI & Tech Skills Training</h3>
+        <p style="font-size: 0.9rem; color: #666; margin-bottom: 1rem;">All Ages Welcome</p>
         <div class="price">$90/hr</div>
         <ul>
-          <li>Training in AI tools, automation, and coding</li>
+          <li>ChatGPT and AI tool mastery</li>
+          <li>Automation and productivity tools</li>
+          <li>Basic coding and programming</li>
           <li>Beginner-friendly for all ages</li>
         </ul>
       </div>
     </div>
 
-    <h3 style="text-align:center;margin-top:2rem;">Add‑On Options</h3>
+    <h3 style="text-align:center;margin-top:3rem;color:#1E2A38;">Add-On Options</h3>
     <div class="cards colorful">
       <div class="card">
         <h3>Progress Report</h3>
-        <p>$20 – Detailed summary of student progress with feedback and next steps.</p>
+        <div class="price" style="font-size:1.5rem;">$20</div>
+        <p>Detailed summary of student progress with personalized feedback and recommended next steps for continued improvement.</p>
       </div>
       <div class="card">
         <h3>Weekly Homework Packet</h3>
-        <p>$15 – Personalized homework and practice worksheets delivered weekly.</p>
+        <div class="price" style="font-size:1.5rem;">$15</div>
+        <p>Personalized homework and practice worksheets delivered weekly, tailored to reinforce session content.</p>
       </div>
       <div class="card">
-        <h3>Quiz/Test Review</h3>
-        <p>$30 – 30-minute session focused on preparing for an upcoming quiz or test.</p>
+        <h3>Quiz/Test Review Session</h3>
+        <div class="price" style="font-size:1.5rem;">$30</div>
+        <p>Focused 30-minute session dedicated to preparing for an upcoming quiz, test, or exam with targeted review.</p>
       </div>
     </div>
 
-    <h3 style="text-align:center; margin-top: 2.5rem;">Premium Video Membership</h3>
+    <h3 style="text-align:center; margin-top: 3rem; color:#1E2A38;">Premium Video Library</h3>
     <div class="cards colorful">
       <div class="card">
-        <h3>Monthly Access</h3>
+        <h3>Monthly Subscription</h3>
         <div class="price">$15/month</div>
         <ul>
           <li>Unlimited access to exclusive video lessons</li>
           <li>Topics include math, reading, writing, and exam prep</li>
+          <li>AI skills and technology training videos</li>
           <li>Watch anytime, at your own pace</li>
+          <li>New content added regularly</li>
         </ul>
-        <a href="videos.html" class="button" style="display:inline-block;margin-top:1rem;background:#F28F3B;padding:0.6rem 1.2rem;color:#fff;border-radius:8px;text-decoration:none;">Explore Video Library</a>
+        <a href="videos.html" class="button" style="display:inline-block;margin-top:1rem;background:#F28F3B;padding:0.8rem 1.5rem;color:#fff;border-radius:8px;text-decoration:none;transition:all 0.3s ease;">Explore Video Library</a>
       </div>
     </div>
   </section>
 
   <footer>
-    &copy; 2025 Ripa Elevate Academy. All rights reserved.
-    <div class="footer-contact">Phone: <a href="tel:+13479960551" style="color:#F28F3B">347-996-0551</a> | Email: <a href="mailto:ripabrian93@gmail.com" style="color:#F28F3B">ripabrian93@gmail.com</a></div>
+    <div class="container">
+      <p>&copy; 2025 Ripa Elevate Academy. All rights reserved.</p>
+      <div class="footer-contact">
+        Phone: <a href="tel:+13479960551">347-996-0551</a> |
+        Email: <a href="mailto:ripabrian93@gmail.com">ripabrian93@gmail.com</a>
+      </div>
+    </div>
   </footer>
 </body>
 </html>
