--- a/about.html
+++ b/about.html
@@ -37,7 +37,13 @@
         <p>I've tutored students from 1st grade through college, helping them succeed in reading comprehension, elementary math, and advanced college-level courses like Algebra, Pre-Calc, and Calculus I, II, III.</p>
         <p>I believe in personalized learning and step-by-step instruction to build lasting confidence. Every student learns differently, and I adapt my teaching style to match each individual's needs and learning pace.</p>
         <p>My approach combines academic rigor with patience and encouragement, creating an environment where students feel comfortable asking questions and making mistakes as part of the learning process.</p>
+
+        <!-- Profile Image Inserted Below -->
+        <div style="margin-top: 30px; text-align: center;">
+          <img src="Brian_Square_Profile.png" alt="Brian Ripa Headshot" style="width: 200px; border-radius: 12px; box-shadow: 0 0 10px rgba(0,0,0,0.1);" />
+        </div>
       </div>
+
       <div class="about-image">
         <img src="https://images.pexels.com/photos/5212703/pexels-photo-5212703.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Brian tutoring a student" />
       </div>
