--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
         <p>My approach combines academic rigor with patience and encouragement, creating an environment where students feel comfortable asking questions and making mistakes as part of the learning process.</p>
       </div>
       <div class="about-image">
-        <img src="Brian_Square_Profile.png" alt="Brian Ripa Headshot" style="width: 280px; border-radius: 12px; box-shadow: 0 0 10px rgba(0,0,0,0.1);" />
+        <img src="Brian_Square_Profile.png" alt="Brian Ripa Headshot" style="width: 300px; border-radius: 12px; box-shadow: 0 0 12px rgba(0, 0, 0, 0.1);" />
       </div>
     </div>
   </section>
@@ -91,4 +91,5 @@
   </footer>
 </body>
 </html>
+
 
