--- a/about.html
+++ b/about.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About Brian – Ripa Elevate Academy</title>
-  <meta name="description" content="Learn about Brian, founder of Ripa Elevate Academy. Computer Science graduate with extensive tutoring experience from elementary through college level.">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
+  <meta name="description" content="Learn about Brian, founder of Ripa Elevate Academy. Computer Science graduate with extensive tutoring experience from elementary through college level." />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
   <header>
@@ -39,7 +39,7 @@
         <p>My approach combines academic rigor with patience and encouragement, creating an environment where students feel comfortable asking questions and making mistakes as part of the learning process.</p>
       </div>
       <div class="about-image">
-        <img src="Brian_Square_Profile.png" alt="Brian Ripa Headshot" style="width: 300px; border-radius: 12px; box-shadow: 0 0 12px rgba(0, 0, 0, 0.1);" />
+        <img src="classroom.jpg" alt="Tutoring Classroom" style="width: 400px; border-radius: 12px; box-shadow: 0 0 12px rgba(0, 0, 0, 0.1);" />
       </div>
     </div>
   </section>
