--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
     <h2>Contact Me</h2>
     <p>If you have any questions or would like to get started, please fill out the form below. I’ll respond as soon as possible.</p>
 
-    <form action="https://formspree.io/f/mqkjvpan" method="POST">
+    <form action="https://formspree.io/f/moqkndvp" method="POST">
       <label for="name">Name</label>
       <input type="text" id="name" name="name" placeholder="Your name" required>
 
@@ -62,3 +62,4 @@
   </footer>
 </body>
 </html>
+
