--- a/contact.html
+++ b/contact.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Contact – Ripa Elevate Academy</title>
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Lato:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Lato:wght@400;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
   <header>
@@ -32,17 +32,17 @@
     <h2>Contact Me</h2>
     <p>If you have any questions or would like to get started, please fill out the form below. I’ll respond as soon as possible.</p>
 
-    <form action="https://formspree.io/f/moqkndvp" method="POST">
+    <form action="https://formspree.io/f/xyzpnkwa" method="POST">
       <label for="name">Name</label>
-      <input type="text" id="name" name="name" placeholder="Your name" required>
+      <input type="text" id="name" name="name" placeholder="Your name" required />
 
       <label for="email">Email</label>
-      <input type="email" id="email" name="email" placeholder="Your email" required>
+      <input type="email" id="email" name="email" placeholder="Your email" required />
 
       <label for="message">Message</label>
       <textarea id="message" name="message" placeholder="How can I help you?" required></textarea>
 
-      <input type="hidden" name="_subject" value="New message from Ripa Elevate Academy">
+      <input type="hidden" name="_subject" value="New message from Ripa Elevate Academy" />
       <button type="submit">Send Message</button>
     </form>
 
@@ -62,4 +62,5 @@
   </footer>
 </body>
 </html>
+
 
