--- a/about.html
+++ b/about.html
@@ -2,95 +2,32 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>About Brian – Ripa Elevate Academy</title>
-  <meta name="description" content="Learn about Brian, founder of Ripa Elevate Academy. Computer Science graduate with extensive tutoring experience from elementary through college level." />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-  <header>
-    <div class="container">
-      <div class="logo"><a href="index.html">Ripa Elevate Academy</a></div>
-      <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html" class="active">About</a></li>
-          <li><a href="services.html">Subjects</a></li>
-          <li><a href="pricing.html">Pricing</a></li>
-          <li><a href="booking.html">Book</a></li>
-          <li><a href="testimonials.html">Testimonials</a></li>
-          <li><a href="resources.html">Resources</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
-
   <section class="about-section">
     <div class="about-container">
       <div class="about-text">
-        <h2>About Brian</h2>
+        <h1>About Brian</h1>
         <p>Hi! I'm Brian, the founder of Ripa Elevate Academy. I earned my undergraduate degree in Computer Science & Information Security from John Jay College and am currently pursuing my Master's in the same field.</p>
+
         <p>I've tutored students from 1st grade through college, helping them succeed in reading comprehension, elementary math, and advanced college-level courses like Algebra, Pre-Calc, and Calculus I, II, III.</p>
+
         <p>I believe in personalized learning and step-by-step instruction to build lasting confidence. Every student learns differently, and I adapt my teaching style to match each individual's needs and learning pace.</p>
+
         <p>My approach combines academic rigor with patience and encouragement, creating an environment where students feel comfortable asking questions and making mistakes as part of the learning process.</p>
       </div>
+
       <div class="about-image">
-        <img src="Brian_Square_Profile.png" alt="Tutoring Classroom" style="width: 400px; border-radius: 12px; box-shadow: 0 0 12px rgba(0, 0, 0, 0.1);" />
+        <img src="Brian_Square_Profile.png" alt="Brian Ripa Headshot" />
       </div>
     </div>
   </section>
-
-  <section class="section">
-    <h2>My Teaching Philosophy</h2>
-    <div class="cards colorful">
-      <div class="card">
-        <h3>Personalized Approach</h3>
-        <p>Every student has unique strengths and challenges. I tailor each session to match individual learning styles and pace, ensuring maximum comprehension and retention.</p>
-      </div>
-      <div class="card">
-        <h3>Building Confidence</h3>
-        <p>Success in academics starts with confidence. I focus on celebrating small wins and building momentum that carries over into all areas of learning.</p>
-      </div>
-      <div class="card">
-        <h3>Step-by-Step Learning</h3>
-        <p>Complex concepts become manageable when broken down into clear, logical steps. I ensure students master each foundation before moving to advanced topics.</p>
-      </div>
-    </div>
-  </section>
-
-  <section class="section alt-bg">
-    <h2>Education & Experience</h2>
-    <div class="cards">
-      <div class="card">
-        <h3>Academic Background</h3>
-        <p>Bachelor's Degree in Computer Science & Information Security from John Jay College. Currently pursuing Master's degree in the same field.</p>
-      </div>
-      <div class="card">
-        <h3>Tutoring Experience</h3>
-        <p>Over 5 years of experience tutoring students from elementary through college level in mathematics, reading, writing, and test preparation.</p>
-      </div>
-      <div class="card">
-        <h3>Specialized Skills</h3>
-        <p>Expert in AI tools training, advanced mathematics, standardized test prep (SAT, SHSAT), and college-level coursework.</p>
-      </div>
-    </div>
-  </section>
-
-  <footer>
-    <div class="container">
-      <p>&copy; 2025 Ripa Elevate Academy. All rights reserved.</p>
-      <div class="footer-contact">
-        Phone: <a href="tel:+13479960551">347-996-0551</a> |
-        Email: <a href="mailto:ripabrian93@gmail.com">ripabrian93@gmail.com</a>
-      </div>
-    </div>
-  </footer>
 </body>
 </html>
+
 
 
 
