--- a/about.html
+++ b/about.html
@@ -21,12 +21,13 @@
       </div>
 
       <div class="about-image">
-        <img src="Brian_Square_Profile.png" alt="Brian Ripa Headshot" />
+        <img src="images/Brian_Square_Profile.png" alt="Brian Ripa Headshot" />
       </div>
     </div>
   </section>
 </body>
 </html>
+
 
 
 
