--- a/about.html
+++ b/about.html
@@ -1,33 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>About Brian – Ripa Elevate Academy</title>
-  <link rel="stylesheet" href="css/style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Us | Ripa Elevate Academy</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <section class="about-section">
-    <div class="about-container">
-      <div class="about-text">
-        <h1>About Brian</h1>
-        <p>Hi! I'm Brian, the founder of Ripa Elevate Academy. I earned my undergraduate degree in Computer Science & Information Security from John Jay College and am currently pursuing my Master's in the same field.</p>
+    <header>
+        <h1>About Ripa Elevate Academy</h1>
+    </header>
 
-        <p>I've tutored students from 1st grade through college, helping them succeed in reading comprehension, elementary math, and advanced college-level courses like Algebra, Pre-Calc, and Calculus I, II, III.</p>
+    <main>
+        <section class="about-section">
+            <div class="profile-container">
+                <img src="images/Brian_Square_Profile.png" alt="Brian Profile Picture" class="profile-image">
+                <div class="bio-text">
+                    <h2>Meet Brian</h2>
+                    <p>
+                        Brian is the founder of Ripa Elevate Academy. With a passion for education and a background in computer science and cybersecurity, Brian created this academy to provide high-quality, personalized tutoring from 1st grade through college. He believes in making learning engaging, confidence-building, and tailored to each student’s needs.
+                    </p>
+                </div>
+            </div>
+        </section>
+    </main>
 
-        <p>I believe in personalized learning and step-by-step instruction to build lasting confidence. Every student learns differently, and I adapt my teaching style to match each individual's needs and learning pace.</p>
-
-        <p>My approach combines academic rigor with patience and encouragement, creating an environment where students feel comfortable asking questions and making mistakes as part of the learning process.</p>
-      </div>
-
-      <div class="about-image">
-        <img src="images/Brian_Square_Profile.png" alt="Brian Ripa Headshot" />
-      </div>
-    </div>
-  </section>
+    <footer>
+        <p>&copy; 2025 Ripa Elevate Academy. All rights reserved.</p>
+    </footer>
 </body>
 </html>
-
 
 
 
