--- a/about.html
+++ b/about.html
@@ -1,35 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us | Ripa Elevate Academy</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-    <header>
-        <h1>About Ripa Elevate Academy</h1>
-    </header>
+<section id="about">
+  <div class="about-container">
+    <div class="about-image">
+      <img src="images/Brian_Square_Profile.png" alt="Brian Profile">
+    </div>
+    <div class="about-text">
+      <h2>Meet Brian</h2>
+      <p>Brian is the founder of Ripa Elevate Academy. With a passion for education and a background in computer science and cybersecurity, Brian created this academy to provide high-quality, personalized tutoring from 1st grade through college. He believes in making learning engaging, confidence-building, and tailored to each student’s needs.</p>
+    </div>
+  </div>
+</section>
 
-    <main>
-        <section class="about-section">
-            <div class="profile-container">
-                <img src="images/Brian_Square_Profile.png" alt="Brian Profile Picture" class="profile-image">
-                <div class="bio-text">
-                    <h2>Meet Brian</h2>
-                    <p>
-                        Brian is the founder of Ripa Elevate Academy. With a passion for education and a background in computer science and cybersecurity, Brian created this academy to provide high-quality, personalized tutoring from 1st grade through college. He believes in making learning engaging, confidence-building, and tailored to each student’s needs.
-                    </p>
-                </div>
-            </div>
-        </section>
-    </main>
-
-    <footer>
-        <p>&copy; 2025 Ripa Elevate Academy. All rights reserved.</p>
-    </footer>
-</body>
-</html>
 
 
 
