--- a/about.html
+++ b/about.html
@@ -1,33 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us | Ripa Elevate Academy</title>
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>About Us | Ripa Elevate Academy</title>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-    <header>
-        <h1>About Ripa Elevate Academy</h1>
-    </header>
+  <header>
+    <nav class="navbar">
+      <div class="logo">Ripa Elevate Academy</div>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html" class="active">About</a></li>
+        <li><a href="services.html">Subjects</a></li>
+        <li><a href="pricing.html">Pricing</a></li>
+        <li><a href="booking.html">Book</a></li>
+        <li><a href="testimonials.html">Testimonials</a></li>
+        <li><a href="resources.html">Resources</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <main>
-        <section class="about-section">
-            <div class="profile-container">
-                <img src="images/Brian_Square_Profile.png" alt="Brian Profile Picture" class="profile-image">
-                <div class="bio-text">
-                    <h2>Meet Brian</h2>
-                    <p>
-                        Brian is the founder of Ripa Elevate Academy. With a passion for education and a background in computer science and cybersecurity, Brian created this academy to provide high-quality, personalized tutoring from 1st grade through college. He believes in making learning engaging, confidence-building, and tailored to each student’s needs.
-                    </p>
-                </div>
-            </div>
-        </section>
-    </main>
+  <main>
+    <section id="about">
+      <div class="about-container">
+        <div class="about-image">
+          <img src="images/Brian_Square_Profile.png" alt="Brian Profile">
+        </div>
+        <div class="about-text">
+          <h2>About Brian</h2>
+          <p>Brian is the founder of Ripa Elevate Academy. With a passion for education and a background in computer science and cybersecurity, Brian created this academy to provide high-quality, personalized tutoring from 1st grade through college. He believes in making learning engaging, confidence-building, and tailored to each student’s needs.</p>
+        </div>
+      </div>
+    </section>
+  </main>
 
-    <footer>
-        <p>&copy; 2025 Ripa Elevate Academy. All rights reserved.</p>
-    </footer>
+  <footer>
+    <p>&copy; 2025 Ripa Elevate Academy. All rights reserved.</p>
+  </footer>
 </body>
 </html>
 
