--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     </div>
   </section>
 
-  <footer>
+    <footer>
     <div class="container">
       <p>&copy; 2025 Ripa Elevate Academy. All rights reserved.</p>
       <div class="footer-contact">
@@ -107,5 +107,12 @@
       </div>
     </div>
   </footer>
+
+  <script>
+    if (window.location.search.length > 0) {
+      window.location.href = window.location.origin + window.location.pathname;
+    }
+  </script>
+
 </body>
 </html>
